# immuni-backend-otp

./: .gitignore  CONTRIBUTING.md  README.md  entrypoint.sh  pyproject.toml  pytest.ini  sonar-project.properties
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
docker/: docker-compose.yml
immuni_otp/: sanic.py
immuni_otp/apis/: otp.py
immuni_otp/core/: config.py  managers.py
immuni_otp/helpers/: otp.py
immuni_otp/models/: swagger.py
tests/: conftest.py  test_managers.py
tests/fixtures/: core.py
tests/test_apis/: test_otp.py
tests/test_helpers/: test_otp.py
